src/test/ui/issues/10000-19999/issue-17431-6.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/issue-17431-6.rs:3:1
   |
LL | enum Foo { X(Mutex<Option<Foo>>) }
   | ^^^^^^^^     ------------------ recursive without indirection
   | |
   | recursive type has infinite size
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `Foo` representable
   |
LL | enum Foo { X(Box<Mutex<Option<Foo>>>) }
   |              ^^^^                  ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
